Updating to latest vers from Cyanogen.

--- a/res/values-th/plurals.xml
+++ b/res/values-th/plurals.xml
@@ -23,12 +23,15 @@
     <item quantity="other"><xliff:g id="files">%1$d</xliff:g> ไฟล์</item>
   </plurals>
   <plurals name="search_found_items">
-    <item quantity="other">พบ <xliff:g id="count">%d</xliff:g> อย่าง</item>
+    <item quantity="other">พบ <xliff:g id="count">%d</xliff:g> รายการ</item>
   </plurals>
   <plurals name="selection_folders">
-    <item quantity="other">เลือก <xliff:g id="folders">%1$d</xliff:g> โฟลเดอร์</item>
+    <item quantity="other"><xliff:g id="folders">%1$d</xliff:g> โฟลเดอร์ถูกเลือก</item>
   </plurals>
   <plurals name="selection_files">
-    <item quantity="other">เลือก <xliff:g id="files">%1$d</xliff:g> ไฟล์</item>
+    <item quantity="other"><xliff:g id="files">%1$d</xliff:g> ไฟล์ถูกเลือก</item>
+  </plurals>
+  <plurals name="deleting_n_items">
+    <item quantity="other">มี <xliff:g id="count">%1$d</xliff:g> รายการจะถูกลบ</item>
   </plurals>
 </resources>
