--- a/res/values/overlay.xml
+++ b/res/values/overlay.xml
@@ -37,38 +37,36 @@
         /system/bin/cat,
         /system/bin/chmod,
         /system/bin/chown,
+        /system/bin/cp,
+        /system/bin/cut,
         /system/bin/dd,
         /system/bin/df,
+        /system/bin/dirname,
+        /system/bin/echo,
+        /system/bin/find,
+        /system/bin/grep,
+        /system/bin/groups,
         /system/bin/gzip,
         /system/bin/id,
         /system/bin/kill,
         /system/bin/ln,
         /system/bin/ls,
+        /system/bin/md5sum,
         /system/bin/mkdir,
         /system/bin/mount,
         /system/bin/mv,
         /system/bin/ps,
+        /system/bin/pwd,
+        /system/bin/readlink,
         /system/bin/rm,
         /system/bin/sh,
-        /system/xbin/awk,
-        /system/xbin/bunzip2,
-        /system/xbin/busybox,
+        /system/bin/sha1sum,
+        /system/bin/stat,
+        /system/bin/tar,
+        /system/bin/toybox,
+        /system/bin/xargs,
         /system/xbin/bzip2,
-        /system/xbin/cp,
-        /system/xbin/cut,
-        /system/xbin/dirname,
-        /system/xbin/echo,
-        /system/xbin/find,
-        /system/xbin/grep,
-        /system/xbin/groups,
-        /system/xbin/gunzip,
-        /system/xbin/pwd,
-        /system/xbin/readlink,
-        /system/xbin/stat,
-        /system/xbin/tar,
-        /system/xbin/xargs,
-        /system/xbin/md5sum,
-        /system/xbin/sha1sum
+        /system/xbin/gunzip
     </string>
 
     <!-- The root command -->
